--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,9 @@
-<h3>Comment utiliser Bean Generator?</h3>
+<div style="text-align: center;">
+    <h3>Comment utiliser Bean Generator?</h3>
 <p>
 Aller sur l'onglet projet appuyer sur le bouton ajouter un nouveau projet.
 </p>
+
+<button class="button">Nouveau Projet</button>
+<button class="button">Générer une classe</button>
+</div>
